--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "canvas-confetti": "^1.6.0",
     "jquery": "^3.7.0"
   }
 }
